# CUGER_building

./: .gitignore  COMPLETION_CHECKLIST.md  GEOMETRY_SIMPLIFY_README.md  IMPLEMENTATION_SUMMARY.md  IO.py  LICENSE  QUICK_START.md  README.md  convexify.py  demo.py  graph.py  main.py  pyproject.toml  requirements.txt  selection0.geo  test.py  test_convexify_only.py  test_process_only.py  test_reorder.py
.github/workflows/: publish-pypi.yml
cuger/: __init__.py  cli.py  compare.py  convexify.py  demo.py  graph.py  graphIO.py  graph_visualise.py  light_sim.py  main.py  pipeline.py  test.py  visualise.py
cuger/__analyse/: __init__.py  geo_anal.py  graph_anal.py  poly.py  visualise.py
cuger/__simulation/: light_sim.py
cuger/__transform/: __init__.py  convexify.py  geometry.py  graph.py  process.py  simplify.py
data/: selection0.geo  selection0_convex.geo  selection0_new.geo  selection0_new.xml
data/adjson/: edges.json  nodes.json
results/example_results/new_geo/: example0.geo
results/example_results/new_xml/: example.xml  example0.xml
scripts/: IO.py  convexify.py  data.ipynb  demo.py  graph.py  graphIO.py  main.py
scripts_moosas/: convexify_new.py  quad_new.py
tests/: test.py
tests/example_results/geo_c/: example0_c.geo
tests/example_results/geo_s/: example0_s_low.geo  example0_s_precise.geo
tests/example_results/graph/: example0.json
tests/example_results/log/: example0.txt
tests/example_results/new_geo/: example.geo  example0.geo
tests/example_results/new_idf/: example0.idf
tests/example_results/new_rdf/: example0.owl
(+13 files in other folders)
