[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cuger"
version = "0.1.0"
description = "Convex graph encoding and representation toolkit for building geometry"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "CUGER contributors" }
]
keywords = ["building", "geometry", "graph", "bim", "bem"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "matplotlib>=3.4.0",
  "networkx>=2.6.0",
  "numpy>=1.20.0",
  "pandas>=1.3.0",
  "pygeos>=0.10.0",
  "scipy>=1.7.0",
  "seaborn>=0.11.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "twine>=5.1.1",
]

[project.scripts]
cuger = "cuger.cli:main"

[project.urls]
Homepage = "https://github.com/Romeo_Leeyh/CUGER_building"
Repository = "https://github.com/Romeo_Leeyh/CUGER_building"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["cuger", "cuger.*"]